// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsApi correctly with hits 1`] = `
<main
  data-test-id="apis"
  id="content"
>
  <div
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    >
      <button
        className="btn btn-primary fdk-button fade-in-500 d-none"
        onClick={[MockFunction]}
        type="button"
      >
        Clear
      </button>
    </div>
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <aside
      className="search-filters col-lg-4 d-none d-lg-block"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Filtrering
      </span>
      <div>
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropTransition={
            Object {
              "mountOnEnter": true,
              "timeout": 150,
            }
          }
          centered={false}
          fade={true}
          isOpen={true}
          keyboard={true}
          modalTransition={
            Object {
              "timeout": 300,
            }
          }
          onClosed={[Function]}
          onOpened={[Function]}
          role="dialog"
          toggle={[MockFunction]}
          zIndex={1050}
        >
          <ModalHeader
            closeAriaLabel="Close"
            tag="h5"
            toggle={[MockFunction]}
            wrapTag="div"
          >
            Filter
          </ModalHeader>
          <ModalBody
            tag="div"
          >
            <div
              className="search-filters"
            >
              <SearchPublishersTree
                activeFilter={null}
                filter={Array []}
                onFilterPublisherHierarchy={[MockFunction]}
                onSearch={null}
                orgPath={null}
                publishers={Object {}}
                title="Provider"
              />
              <FilterBox
                activeFilter={null}
                filter={
                  Object {
                    "buckets": Array [
                      Object {
                        "count": 1,
                        "key": "MISSING",
                      },
                      Object {
                        "count": 1,
                        "key": "application/json",
                      },
                      Object {
                        "count": 1,
                        "key": "application/xml",
                      },
                      Object {
                        "count": 1,
                        "key": "text/json",
                      },
                      Object {
                        "count": 1,
                        "key": "text/xml",
                      },
                    ],
                  }
                }
                htmlKey={2}
                onClick={null}
                themesItems={null}
                title="Format"
              />
            </div>
          </ModalBody>
          <ModalFooter
            tag="div"
          >
            <Button
              className="fdk-button"
              color="primary"
              onClick={[MockFunction]}
              tag="button"
            >
              Close
            </Button>
          </ModalFooter>
        </Modal>
        <SearchPublishersTree
          activeFilter={null}
          filter={Array []}
          onFilterPublisherHierarchy={[MockFunction]}
          onSearch={null}
          orgPath={null}
          publishers={Object {}}
          title="Provider"
        />
        <FilterBox
          activeFilter={null}
          filter={
            Object {
              "buckets": Array [
                Object {
                  "count": 1,
                  "key": "MISSING",
                },
                Object {
                  "count": 1,
                  "key": "application/json",
                },
                Object {
                  "count": 1,
                  "key": "application/xml",
                },
                Object {
                  "count": 1,
                  "key": "text/json",
                },
                Object {
                  "count": 1,
                  "key": "text/xml",
                },
              ],
            }
          }
          htmlKey={2}
          onClick={null}
          themesItems={null}
          title="Format"
        />
      </div>
    </aside>
    <div
      className="col-12 col-lg-8"
      id="apis"
    >
      <SearchHitItem
        fadeInCounter={0}
        item={
          Object {
            "formats": Array [],
            "id": "68dda78f-364f-41dd-869a-0dd8d9a3fe4c",
            "nationalComponent": false,
            "publisher": Object {
              "id": "970018131",
              "name": "UTDANNINGSDIREKTORATET",
              "orgPath": "/STAT/872417842/970018131",
              "prefLabel": Object {
                "no": "Utdanningsdirektoratet",
              },
            },
            "title": "Barnehagefakta",
            "titleFormatted": "Barnehagefakta",
          }
        }
        key="68dda78f-364f-41dd-869a-0dd8d9a3fe4c"
        publishers={Object {}}
      />
      <SearchHitItem
        fadeInCounter={1}
        item={
          Object {
            "formats": Array [
              "application/xml",
              "application/json",
              "text/json",
              "text/xml",
            ],
            "id": "70f6e5b3-b633-413b-b5e7-11b63bb413eb",
            "nationalComponent": false,
            "publisher": Object {
              "id": "970018131",
              "name": "UTDANNINGSDIREKTORATET",
              "orgPath": "/STAT/872417842/970018131",
              "prefLabel": Object {
                "no": "Utdanningsdirektoratet",
              },
            },
            "title": "Nasjonalt barnehageregister API",
            "titleFormatted": "Nasjonalt barnehageregister API",
          }
        }
        key="70f6e5b3-b633-413b-b5e7-11b63bb413eb"
        publishers={Object {}}
      />
    </div>
  </div>
</main>
`;

exports[`should render ResultsApi correctly with minimum of props and no hits 1`] = `
<main
  data-test-id="apis"
  id="content"
>
  <div
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    >
      <button
        className="btn btn-primary fdk-button fade-in-500 d-none"
        onClick={null}
        type="button"
      >
        Clear
      </button>
    </div>
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <aside
      className="search-filters col-lg-4 d-none d-lg-block"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Filtrering
      </span>
    </aside>
    <div
      className="col-12 col-lg-8"
      id="apis"
    />
  </div>
</main>
`;
